# CaptureView

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Include/CaptureView/Core/: Application.hpp  Logger.hpp
Include/CaptureView/Graphics/: GraphicsDevice.hpp
Include/CaptureView/Platform/: Window.hpp
Include/CaptureView/Rendering/: Renderer.hpp
Source/: Main.cpp
Source/Core/: Application.cpp  Logger.cpp
Source/Graphics/: GraphicsDevice.cpp
Source/Platform/: Window.cpp
Source/Rendering/: Renderer.cpp
